# aplicacion_curso_medicina

./: .gitignore  CursoMedicina.spec  enyn.spec  icon.icns  main.spec  mi_app.spec  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_mac.yml  build_windows.yml  main.yml
curso_medicina/: main.py
curso_medicina.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
curso_medicina/database/: connection.py
curso_medicina/database/operations/: alumno_operations.py  auth_operations.py  deuda_operations.py  gasto_operations.py  inscripcion_operations.py  materia_operations.py  movimiento_operations.py  pagos_operations.py
curso_medicina/gui/: app.py
curso_medicina/gui/frames/: ajustes_frame.py  alta_alumno_frame.py  alta_gasto_frame.py  alta_inscripcion_frame.py  alta_pago_frame.py  alumno_frame.py  base_frame.py  gasto_frame.py  login_frame.py  pago_frame.py  sidebar.py  ver_alumnos_frame.py  ver_gastos_frame.py  ver_movimientos_frame.py  ver_pagos_frame.py
curso_medicina/gui/utils/: frame_registry.py  receipt_generator.py  report_generator.py  validators.py
